styled cards, fixing thumbnail aspect ratio, delegating gap between cards to #projects's flex, and made cards interact with user with transitions

--- a/css/style.css
+++ b/css/style.css
@@ -21,19 +21,28 @@ body {
   min-width: 33%;
   width: min-content;
 
-  margin: 1rem;
   padding: 1rem;
   border-radius: 1.5rem;
   background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0.2em 0.2em 10px rgba(0, 0, 0, 0.1);
+
+  transition: transform 0.1s,box-shadow 0.1s;
 }
 
 #projects article:hover {
   cursor: pointer;
+  transform: translateY(-0.2rem);
+  box-shadow: 0.2em 0.4rem 10px rgba(0, 0, 0, 0.2);
+
+  transition: transform 0.2s,box-shadow 0.2s;
 }
 
 #projects article img {
   width: 100%;
+  aspect-ratio: 2 / 1;
+  object-fit: cover;
+
+  border-radius: 0.5rem;
 }
 
 a {
@@ -48,5 +57,6 @@ a {
 #projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 1.5rem;
 }
